[package]
name = "hobo"
version = "0.1.0"
edition = "2021"

[lib]
name = "hobors"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.19"
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
