[package]
name = "hobo"
version = "0.1.0"
edition = "2021"

[lib]
name = "hobors"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.19"
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
futures-util = "0.3.31"
anyhow = "1.0.96"
log = { version = "0.4.26", features = ["kv", "kv_std", "std"] }
chrono = "0.4.40"
yrs = "0.22.0"
serde_json = "1.0.139"
base64 = "0.22.1"
serde = "1.0.218"
